Tweaks and typos after proof-reading.

--- a/MastodonManual.tex
+++ b/MastodonManual.tex
@@ -171,11 +171,11 @@
 
 % Automated tracking.
 \newpage
-% \input{ src/Chapter2.tex }
+\input{ src/Chapter2.tex }
 
 % Manual tracking. TrackScheme.
 \newpage
-% \input{ src/Chapter3.tex }
+\input{ src/Chapter3.tex }
 
 % Orienting in Mastodon.
 \newpage
