--- a/References.bib
+++ b/References.bib
@@ -1,3 +1,17 @@
+@article{TGMMpaper,
+   author = {Amat, Fernando and Lemon, William and Mossing, Daniel P. and McDole, Katie and Wan, Yinan and Branson, Kristin and Myers, Eugene W. and Keller, Philipp J.},
+   title = {Fast, accurate reconstruction of cell lineages from large-scale fluorescence microscopy data},
+   journal = {Nature Methods},
+   volume = {11},
+   number = {9},
+   pages = {951-958},
+   ISSN = {1548-7105},
+   DOI = {10.1038/nmeth.3036},
+   url = {https://doi.org/10.1038/nmeth.3036},
+   year = {2014},
+   type = {Journal Article}
+}
+
 @ARTICLE{Sage2005,
     AUTHOR="Sage, D. and Neumann, F.R. and Hediger, F. and Gasser, S.M. and
             Unser, M.",
@@ -14,7 +28,7 @@
 
 @article{McDole2018,
    author = {McDole, Katie and Guignard, Léo and Amat, Fernando and Berger, Andrew and Malandain, Grégoire and Royer, Loïc A. and Turaga, Srinivas C. and Branson, Kristin and Keller, Philipp J.},
-   title = {<em>In Toto</em> Imaging and Reconstruction of Post-Implantation Mouse Development at the Single-Cell Level},
+   title = {In Toto Imaging and Reconstruction of Post-Implantation Mouse Development at the Single-Cell Level},
    journal = {Cell},
    volume = {175},
    number = {3},
@@ -88,16 +102,17 @@ https://www.nature.com/articles/nmeth.2808#supplementary-information},
 
 
 @article {BigStitcher,
-	author = {H{\"o}rl, David and Rusak, Fabio Rojas and Preusser, Friedrich and Tillberg, Paul and Randel, Nadine and Chhetri, Raghav K. and Cardona, Albert and Keller, Philipp J. and Harz, Hartmann and Leonhardt, Heinrich and Treier, Mathias and Preibisch, Stephan},
-	title = {BigStitcher: Reconstructing high-resolution image datasets of cleared and expanded samples},
-	elocation-id = {343954},
-	year = {2018},
-	doi = {10.1101/343954},
-	publisher = {Cold Spring Harbor Laboratory},
-	abstract = {New methods for clearing and expansion of biological objects create large, transparent samples that can be rapidly imaged using light-sheet microscopy. Resulting image acquisitions are terabytes in size and consist of many large, unaligned image tiles that suffer from optical distortions. We developed the BigStitcher software that efficiently handles and reconstructs large multi-tile, multi-view acquisitions compensating all major optical effects, thereby making single-cell resolved whole-organ datasets amenable to biological studies.},
-	URL = {https://www.biorxiv.org/content/early/2018/06/10/343954},
-	eprint = {https://www.biorxiv.org/content/early/2018/06/10/343954.full.pdf},
-	journal = {bioRxiv}
+   author = {H{\"o}rl, David and Rojas Rusak, Fabio and Preusser, Friedrich and Tillberg, Paul and Randel, Nadine and Chhetri, Raghav K. and Cardona, Albert and Keller, Philipp J. and Harz, Hartmann and Leonhardt, Heinrich and Treier, Mathias and Preibisch, Stephan},
+   title = {BigStitcher: reconstructing high-resolution image datasets of cleared and expanded samples},
+   journal = {Nature Methods},
+   volume = {16},
+   number = {9},
+   pages = {870-874},
+   ISSN = {1548-7105},
+   DOI = {10.1038/s41592-019-0501-0},
+   url = {https://doi.org/10.1038/s41592-019-0501-0},
+   year = {2019},
+   type = {Journal Article}
 }
 
 
