--- a/src/Chapter3.tex
+++ b/src/Chapter3.tex
@@ -25,7 +25,7 @@ Because this catalogue of actions can be a bit dry and long to swallow, we will 
 First, load or retrieve the tracking data of the previous chapter. 
 You should have a few hundreds of tracks. 
 To open a TrackScheme view window, press the \menu{trackscheme} button on the main window (Figure~\ref{fig:MastodonMainWindow} page~\pageref{fig:MastodonMainWindow}).
-A window as shown in Figure~\ref{fig:TrackScheme} should open.
+A window as shown in figure~\ref{fig:TrackScheme} should open.
 
 \begin{figure}
     \centering
@@ -47,7 +47,7 @@ It is a great tool particularly to study and edit cell lineages.
 When opened, the view in TrackScheme is scaled so that the full data is shown, all tracks over all time-points. 
 Even on our small dataset, most of the tracks and spots appear as single lines or dense boxes.
 To see the details of each track, you need to zoom in and navigate around the data.
-The navigation actions their mappings are listed in the Table~\ref{tab:MastodonTrackSchemeNavigationKeys} below.
+The navigation actions their mappings are listed in the table~\ref{tab:MastodonTrackSchemeNavigationKeys} below.
 
 \begin{table}[!htbp]
     \centering
@@ -337,7 +337,7 @@ Finally there are commands to add a full track from the currently focused spot.
 The selection is shown in BDV views as red or magenta spots and links by default.
 In BDV views you can only edit the selection via \keys{\shift+click}.
 The interaction with the focus also work as described above.
-These default key-bindings are recapitulated in the Table~\ref{tab:MastodonSelectionKeys} page~\pageref{tab:MastodonSelectionKeys}.
+These default key-bindings are recapitulated in the table~\ref{tab:MastodonSelectionKeys}.
 
 \begin{table}[!htbp]
     \centering
@@ -423,7 +423,7 @@ In our humble opinion, this is one of the core reasons for Mastodon, a tracking 
     \subfloat[]{\includegraphics[height=0.18\textheight]{figures/Mastodon_ManualTracking_03.png}}
     \hfill\null
     
-    \caption{Manual tracking in Mastodon. \textbf{a.}~After selecting the spots we added to each time-point. \textbf{b.}~After linking them with \keys{Shift+K}. \textbf{c.}~Backtracking a cell with \keys{Shift+A}.  }
+    \caption{Manual tracking in Mastodon. \textbf{a.}~After selecting the spots we added to each time-point. \textbf{b.}~After linking them with \keys{shift+K}. \textbf{c.}~Backtracking a cell with \keys{shift+A}.  }
     \label{fig:ManualTracking}
 \end{figure}  
 
