--- a/src/TableSelectionKeys.tex
+++ b/src/TableSelectionKeys.tex
@@ -28,7 +28,7 @@
     Select all the spots and links \textit{downward} (forward in time) in the track of the currently focused spot. & \keys{\shift+Page\ \arrowkeydown}
     \\ \midrule
     
-    Add the previous / next spot in time to the selection.      & \keys{\shift + \arrowkeyup} and \keys{\shift + \arrowkeydown}
+    Add the previous / next spot in time to the selection.      & \keys{\shift + \arrowkeyup} / \keys{\shift + \arrowkeydown}
     \\ \midrule
 
     Add all spots to the selection from current spot to the beginning of a branch.  & \keys{\shift + \Alt + \arrowkeyup}
@@ -46,7 +46,7 @@
     \multicolumn{2}{c}{\textit{Selection in TrackScheme.}}
     \\ \midrule
     
-    Add the spot to the left / right of the focus to the selection.  & \keys{\shift+\arrowkeyleft} and \keys{\shift+\arrowkeyright}
+    Add the spot to the left / right of the focus to the selection.  & \keys{\shift+\arrowkeyleft} / \keys{\shift+\arrowkeyright}
     \\ \midrule
     
     Draw  a selection box   & \keys{Left-click} and \keys{Drag}.
