--- a/src/TableBDVNavigationKeys.tex
+++ b/src/TableBDVNavigationKeys.tex
@@ -7,7 +7,7 @@
     \multicolumn{2}{c}{\textit{View.}}
     \\ \midrule
     
-    Move in X \& Y.                 & \keys{Right-click} and \keys{Drag}.
+    Move in X \& Y.                 & \keys{Right-click} and \keys{Drag}
     \\ \midrule
     
     Move in Z.                      & \keys{Mouse-wheel}. Press and hold \keys{\shift} to move faster, \keys{\ctrl} to move slower.
@@ -16,9 +16,9 @@
     Align view with X / Y / Z axes. &  
     \begin{minipage}[t]{0.7\textwidth}
     \begin{myitemize}
-        \item  Align with XY plane: \keys{\shift+Z}. 
-        \item Align with YZ plane: \keys{\shift+X}. 
-        \item Align with XZ plane: \keys{\shift+C} or \keys{\shift+Y}. 
+        \item  Align with XY plane: \keys{\shift+Z}
+        \item Align with YZ plane: \keys{\shift+X}
+        \item Align with XZ plane: \keys{\shift+C} or \keys{\shift+Y} 
     \end{myitemize}
     The view will rotate around the location you clicked.
     \end{minipage}
@@ -52,13 +52,13 @@
     \multicolumn{2}{c}{\textit{Image display.}}
     \\ \midrule
     
-    Select source 1, 2 \ldots         & Press \keys{1}, \keys{2} \ldots
+    Select source 1, 2 \ldots         & Press \keys{1} / \keys{2} \ldots
     \\ \midrule
     
     Brightness and color dialog.    & Press \keys{S}. In this dialog you can adjust the min \& max for each source, select to what sources these min \& max apply and pick a color for each source.
     \\ \midrule
     
-    Toggle fused mode.              & Press \keys{F}. In fused mode, several sources are overlaid. Press \keys{\shift+1}, \keys{\shift+2} \ldots to add / remove the source to the view. In single-source mode, only one source is shown.
+    Toggle fused mode.              & Press \keys{F}. In fused mode, several sources are overlaid. Press \keys{\shift+1} / \keys{\shift+2} \ldots to add / remove the source to the view. In single-source mode, only one source is shown.
     \\ \midrule
     
     Visibility and grouping dialog.     & Press \keys{F6}. In this dialog you can define what sources are visible in fused mode, and define groups of sources for use in the grouping mode.
