Start semi-automatic tracking chapter.

--- a/MastodonManual.tex
+++ b/MastodonManual.tex
@@ -173,20 +173,20 @@
 \part{Tutorials.}
 
 % Automated tracking.
-% \newpage
-% \input{ src/Chapter2.tex }
+\newpage
+\input{src/Chapter2.tex}
 
 % % Manual tracking. TrackScheme.
-% \newpage
-% \input{ src/Chapter3.tex }
+\newpage
+\input{src/Chapter3.tex}
 
 % % Orienting in Mastodon.
 % \newpage
-% \input{ src/Chapter4.tex }
+% \input{src/Chapter4.tex}
 
 % % Feature, tags and tables.
 % \newpage
-% \input{ src/Chapter5.tex }
+% \input{src/Chapter5.tex}
 
 \newpage
 \input{src/Chapter6.tex}
