--- a/src/Chapter2.tex
+++ b/src/Chapter2.tex
@@ -183,6 +183,7 @@ The image data will be loaded along with the lineages.
 
 
 \subsection{Detecting cells.}
+\label{Detecting_Cells}
 
 \begin{wrapfigure}{r}{0.4\textwidth}
     \centering
