--- a/src/Chapter3.tex
+++ b/src/Chapter3.tex
@@ -1,4 +1,5 @@
 \section{Manually editing tracks in Mastodon. TrackScheme.}
+\label{Manuel_Editing}
 
 One of the key feature of Mastodon, the implementation of which made our lives extremely hard and rich, is the ability to edit manually at any time any spot or link within an annotation that can contains billions of them, while retaining a good and pleasant response time from the software.
 I am not even speaking of the undo/redo mechanism, which getting right was also very interesting. 
